--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build && electron-builder",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . -c .eslintrc.js --fix --ext .ts,.js,.vue,.tsx,.jsx"
   },
   "dependencies": {
     "@vueuse/core": "^10.1.2",
@@ -16,9 +17,21 @@
     "vue-router": "^4.2.2"
   },
   "devDependencies": {
+    "@antfu/eslint-config-vue": "^0.39.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
     "@vitejs/plugin-vue": "^4.1.0",
     "electron": "^25.0.0",
-    "electron-builder": "^23.6.0",
+    "electron-builder": "^24.4.0",
+    "eslint": "^8.41.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-regex": "^1.10.0",
+    "eslint-plugin-sonarjs": "^0.19.0",
+    "eslint-plugin-unicorn": "^47.0.0",
+    "eslint-plugin-vue": "^9.14.1",
     "typescript": "^5.0.2",
     "unplugin-auto-import": "^0.16.4",
     "vite": "^4.3.9",
