--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,9 @@
     "antfu.iconify",
     "editorconfig.editorconfig",
     "dbaeumer.vscode-eslint",
-    "stylelint.vscode-stylelint"
+    "stylelint.vscode-stylelint",
+    "streetsidesoftware.code-spell-checker",
+    "equinusocio.vsc-community-material-theme",
+    "k--kato.intellij-idea-keybindings"
   ]
 }
