--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "dev": "vite",
     "build": "vue-tsc && vite build && electron-builder",
     "preview": "vite preview",
-    "lint": "eslint . -c .eslintrc.js --fix --ext .ts,.js,.vue,.tsx,.jsx"
+    "lint": "eslint . -c .eslintrc.js --fix --ext .ts,.js,.vue,.tsx,.jsx && npx stylelint **/*.scss"
   },
   "dependencies": {
     "@vueuse/core": "^10.1.2",
     "pinia": "^2.1.3",
+    "sass": "^1.62.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   },
@@ -32,6 +33,11 @@
     "eslint-plugin-sonarjs": "^0.19.0",
     "eslint-plugin-unicorn": "^47.0.0",
     "eslint-plugin-vue": "^9.14.1",
+    "postcss-html": "^1.5.0",
+    "stylelint": "^14.15.0",
+    "stylelint-config-idiomatic-order": "^9.0.0",
+    "stylelint-config-standard-scss": "^6.1.0",
+    "stylelint-use-logical-spec": "^4.1.0",
     "typescript": "^5.0.2",
     "unplugin-auto-import": "^0.16.4",
     "vite": "^4.3.9",
