--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,12 @@
     "paths": {
       "@/*": [
         "src/*"
+      ],
+      "@images/*": [
+        "src/assets/images/*"
+      ],
+      "@styles/*": [
+        "src/styles/*"
       ]
     },
     "types": [
