--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "An electron-vue project",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build && electron-builder",
+    "build": "vue-tsc --noEmit && vite build && electron-builder",
     "preview": "vite preview",
     "lint": "eslint . -c .eslintrc.js --fix --ext .ts,.js,.vue,.tsx,.jsx && npx stylelint **/*.scss"
   },
@@ -43,5 +43,10 @@
     "vite": "^4.3.9",
     "vite-plugin-electron": "^0.11.2",
     "vue-tsc": "^1.4.2"
+  },
+  "debug": {
+    "env": {
+      "VITE_DEV_SERVER_URL": "http://127.0.0.1:3344/"
+    }
   }
 }
