--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "stylelint-use-logical-spec": "^4.1.0",
     "typescript": "^5.0.2",
     "unplugin-auto-import": "^0.16.4",
+    "unplugin-vue-router": "^0.6.4",
     "vite": "^4.3.9",
     "vite-plugin-electron": "^0.11.2",
     "vue-tsc": "^1.4.2"
