--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.1.2",
+    "element-plus": "^2.3.6",
     "pinia": "^2.1.3",
     "sass": "^1.62.1",
+    "unplugin-vue-components": "^0.25.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   },
