--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,7 @@
     },
     "types": [
       "vite/client",
+      "element-plus/global"
       // "vite-plugin-pages/client",
       // "vite-plugin-vue-layouts/client"
     ],
