--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vitejs/plugin-vue": "^4.1.0",
     "electron": "^25.0.0",
     "electron-builder": "^24.4.0",
+    "electron-devtools-installer": "^3.2.0",
     "eslint": "^8.41.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-typescript": "^3.5.5",
