--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gui-tpl",
+  "name": "game-debugger",
   "private": true,
   "version": "0.0.0",
   "main": "dist/electron/main/index.js",
@@ -14,7 +14,6 @@
     "@vueuse/core": "^10.1.2",
     "element-plus": "^2.3.6",
     "pinia": "^2.1.3",
-    "sass": "^1.62.1",
     "unplugin-vue-components": "^0.25.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
@@ -37,12 +36,15 @@
     "eslint-plugin-unicorn": "^47.0.0",
     "eslint-plugin-vue": "^9.14.1",
     "postcss-html": "^1.5.0",
+    "sass": "^1.63.3",
     "stylelint": "^14.15.0",
     "stylelint-config-idiomatic-order": "^9.0.0",
     "stylelint-config-standard-scss": "^6.1.0",
     "stylelint-use-logical-spec": "^4.1.0",
     "typescript": "^5.0.2",
+    "unocss": "^0.53.1",
     "unplugin-auto-import": "^0.16.4",
+    "unplugin-element-plus": "^0.7.1",
     "unplugin-vue-router": "^0.6.4",
     "vite": "^4.3.9",
     "vite-plugin-electron": "^0.11.2",
