--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,8 @@
     },
     "types": [
       "vite/client",
-      "element-plus/global"
+      "element-plus/global",
+      "unplugin-icons/types/vue",
       // "vite-plugin-pages/client",
       // "vite-plugin-vue-layouts/client"
     ],
