--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "electron": "^25.0.0",
     "electron-builder": "^24.4.0",
     "electron-devtools-installer": "^3.2.0",
+    "electron-log": "^4.4.8",
     "eslint": "^8.41.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-typescript": "^3.5.5",
